contrast fix i think

--- a/css/style.css
+++ b/css/style.css
@@ -2420,6 +2420,7 @@ html {
     margin-top: 40px;
   }
   
+  
   .primary-button {
     color: #fff;
     letter-spacing: 2px;
@@ -2502,7 +2503,7 @@ html {
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
-    color: #636363;
+    text-decoration: #636363;;
   }
   
   .navigation-item:hover {
